--- a/.github/workflows/wf_pass3_sims_integrated.yml
+++ b/.github/workflows/wf_pass3_sims_integrated.yml
@@ -12,61 +12,31 @@ on:
       MODE:
         required: true
         type: string
+        default: "predict"
       SIMS:
         required: true
         type: string
+        default: "600"
       TOPN:
         required: true
         type: string
+        default: "18"
       UNIT:
         required: true
         type: string
+        default: "100"
+      FILTERS:
+        required: false
+        type: string
+        default: ""
+      KEYMAN:
+        required: false
+        type: string
+        default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
       OUTDIR:
         required: true
         type: string
-
-      # Filters
-      F_REQUIRE_ODDS:
-        required: false
-        type: string
-      F_MIN_EV:
-        required: false
-        type: string
-      F_ODDS_BANDS:
-        required: false
-        type: string
-      F_ODDS_MIN:
-        required: false
-        type: string
-      F_ODDS_MAX:
-        required: false
-        type: string
-      F_EXCLUDE_FIRST1:
-        required: false
-        type: string
-      F_ONLY_FIRST1:
-        required: false
-        type: string
-      F_BUY_IN_TOP3:
-        required: false
-        type: string
-      F_BUY_THR:
-        required: false
-        type: string
-
-      # Keyman
-      K_ENABLE:
-        required: false
-        type: string
-      K_THR:
-        required: false
-        type: string
-      K_BOOST:
-        required: false
-        type: string
-      K_AGGR:
-        required: false
-        type: string
+        default: "scripts/sims"
 
 permissions:
   contents: write
@@ -88,6 +58,49 @@ jobs:
           python -m pip install --upgrade pip
           pip install numpy pandas joblib scikit-learn
 
+      - name: Parse FILTERS & KEYMAN
+        id: parse
+        env:
+          FILTERS: ${{ inputs.FILTERS }}
+          KEYMAN: ${{ inputs.KEYMAN }}
+        run: |
+          set -euo pipefail
+          parse_kvlist () {
+            local s="$1"; local prefix="$2"
+            IFS=',' read -r -a pairs <<< "$s"
+            for kv in "${pairs[@]}"; do
+              kv="$(echo "$kv" | xargs)"
+              [ -z "$kv" ] && continue
+              if [[ "$kv" == *"="* ]]; then
+                k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
+                v="$(echo "${kv#*=}" | xargs)"
+                echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
+              fi
+            done
+          }
+
+          {
+            echo "F_REQUIRE_ODDS=false"
+            echo "F_MIN_EV=0"
+            echo "F_ODDS_BANDS="
+            echo "F_ODDS_MIN=0"
+            echo "F_ODDS_MAX=0"
+            echo "F_EXCLUDE_FIRST1=false"
+            echo "F_ONLY_FIRST1=false"
+            echo "F_BUY_IN_TOP3=false"
+            echo "F_BUY_THR=0.7"
+          } >> "$GITHUB_OUTPUT"
+
+          {
+            echo "K_ENABLE=true"
+            echo "K_THR=0.7"
+            echo "K_BOOST=0.15"
+            echo "K_AGGR=0.0"
+          } >> "$GITHUB_OUTPUT"
+
+          [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
+          [ -n "${KEYMAN:-}" ] && parse_kvlist "$KEYMAN" "K_"
+
       - name: Run Pass3 (SimS integrated with ML)
         env:
           DATE: ${{ inputs.DATE }}
@@ -95,21 +108,20 @@ jobs:
           MODE: ${{ inputs.MODE }}
           SIMS: ${{ inputs.SIMS }}
           TOPN: ${{ inputs.TOPN }}
-          UNIT: ${{ inputs.UNIT }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          F_REQUIRE_ODDS: ${{ inputs.F_REQUIRE_ODDS }}
-          F_MIN_EV: ${{ inputs.F_MIN_EV }}
-          F_ODDS_BANDS: ${{ inputs.F_ODDS_BANDS }}
-          F_ODDS_MIN: ${{ inputs.F_ODDS_MIN }}
-          F_ODDS_MAX: ${{ inputs.F_ODDS_MAX }}
-          F_EXCLUDE_FIRST1: ${{ inputs.F_EXCLUDE_FIRST1 }}
-          F_ONLY_FIRST1: ${{ inputs.F_ONLY_FIRST1 }}
-          F_BUY_IN_TOP3: ${{ inputs.F_BUY_IN_TOP3 }}
-          F_BUY_THR: ${{ inputs.F_BUY_THR }}
-          K_ENABLE: ${{ inputs.K_ENABLE }}
-          K_THR: ${{ inputs.K_THR }}
-          K_BOOST: ${{ inputs.K_BOOST }}
-          K_AGGR: ${{ inputs.K_AGGR }}
+          F_REQUIRE_ODDS: ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
+          F_MIN_EV: ${{ steps.parse.outputs.F_MIN_EV }}
+          F_ODDS_BANDS: ${{ steps.parse.outputs.F_ODDS_BANDS }}
+          F_ODDS_MIN: ${{ steps.parse.outputs.F_ODDS_MIN }}
+          F_ODDS_MAX: ${{ steps.parse.outputs.F_ODDS_MAX }}
+          F_EXCLUDE_FIRST1: ${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}
+          F_ONLY_FIRST1: ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
+          F_BUY_IN_TOP3: ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
+          F_BUY_THR: ${{ steps.parse.outputs.F_BUY_THR }}
+          K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
+          K_THR: ${{ steps.parse.outputs.K_THR }}
+          K_BOOST: ${{ steps.parse.outputs.K_BOOST }}
+          K_AGGR: ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
           echo "[pass3] MODE=$MODE DATE=$DATE PID=$PID"
@@ -135,9 +147,17 @@ jobs:
           fi
 
       - name: Aggregate & write overall.json
+        env:
+          DATE: ${{ inputs.DATE }}
+          MODE: ${{ inputs.MODE }}
+          UNIT: ${{ inputs.UNIT }}
+          SIMS: ${{ inputs.SIMS }}
+          TOPN: ${{ inputs.TOPN }}
+          PID: ${{ inputs.PID }}
+          OUTDIR: ${{ inputs.OUTDIR }}
         run: |
           set -euo pipefail
-          python scripts/sims/aggregate_overall.py "${{ inputs.OUTDIR }}" "${{ inputs.DATE }}" "${{ inputs.MODE }}" "${{ inputs.UNIT }}" "${{ inputs.SIMS }}" "${{ inputs.TOPN }}" "${{ inputs.PID }}"
+          python scripts/sims/aggregate_overall.py "$OUTDIR" "$DATE" "$MODE" "$UNIT" "$SIMS" "$TOPN" "$PID"
 
       - name: Commit results
         if: always()
